--- a/RecipeSearch/Scenes/View/RecipeSearchView/RecipeView.xib
+++ b/RecipeSearch/Scenes/View/RecipeSearchView/RecipeView.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RecipeView" customModule="RecipeSearch" customModuleProvider="target">
             <connections>
                 <outlet property="activityIndicator" destination="OHq-YD-Tan" id="Hie-yF-3oV"/>
+                <outlet property="healthCollectionView" destination="wuK-s7-dC1" id="bzk-he-LE4"/>
                 <outlet property="recipeTabelView" destination="Q0r-Of-lTy" id="dGm-mz-N10"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -21,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Q0r-Of-lTy">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <rect key="frame" x="0.0" y="124" width="414" height="738"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="OHq-YD-Tan">
@@ -31,15 +32,31 @@
                         <constraint firstAttribute="width" constant="30" id="hfs-e6-W1h"/>
                     </constraints>
                 </activityIndicatorView>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="wuK-s7-dC1">
+                    <rect key="frame" x="0.0" y="64" width="414" height="40"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="nZo-zZ-jle"/>
+                    </constraints>
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nTC-5O-UUz">
+                        <size key="itemSize" width="128" height="60"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="Q0r-Of-lTy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Isp-Z9-cI4"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Q0r-Of-lTy" secondAttribute="bottom" id="LnE-7o-hSJ"/>
+                <constraint firstItem="wuK-s7-dC1" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="Ocr-yL-66C"/>
+                <constraint firstItem="wuK-s7-dC1" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Udj-Zz-ogC"/>
                 <constraint firstItem="OHq-YD-Tan" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="W0Z-jv-hGT"/>
-                <constraint firstItem="Q0r-Of-lTy" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="W3M-ES-w4o"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Q0r-Of-lTy" secondAttribute="trailing" id="mPx-gQ-4a9"/>
+                <constraint firstItem="Q0r-Of-lTy" firstAttribute="top" secondItem="wuK-s7-dC1" secondAttribute="bottom" constant="20" id="uJo-Ek-gYW"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="wuK-s7-dC1" secondAttribute="trailing" id="uWA-Py-GVK"/>
                 <constraint firstItem="OHq-YD-Tan" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="vB8-VX-cvI"/>
             </constraints>
             <point key="canvasLocation" x="137.68115942028987" y="95.758928571428569"/>
